--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -3,17 +3,28 @@
     
     <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
     
-    <h3 class="mb0 w-100 accent normal f3 f2-l lh-solid relative w5 bg-white z-1 vw-70-l">
+    <h3 class="mb0 accent normal f3 f2-l lh-solid  measure-wide bg-white ">
      A team of technologists, designers, and community organizers who value working with mission-oriented partners. Together, we have years of experience building open source technologies and sustainable communities.
 
     </h3>
 
-    <p class="measure-wide f4 f3-l lh-copy dark-gray bg-white">
+
+<div class="flex flex-wrap mb4">
+    
+      <img src="https://boredhumans.b-cdn.net/faces2/105.jpg" class="br-100 h3 w3 pa3 pl0 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/103.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/107.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/109.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/145.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/109.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/103.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/105.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
+</div>
+     <p class="measure-wide f4 f3-l lh-copy dark-gray bg-white">
       As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.
-    </p>
-  </div>
+    </p> </div>
   <div class="w-50-l">
-    <figure class="ma0 ma4 relative">
+    <figure class="relative mt0 ma4 ">
       <img class="db" src="/assets/images/scaling-1.png" alt="Photo by Caleb George on Unsplash">
       <figcaption class="absolute bottom-2-l bottom-1 left-1 left-2-l f6-l f7 white">Photo by Caleb George on Unsplash</figcaption>
     </figure>
