start working on values and work variants

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -2,10 +2,14 @@
   <div class="w-50-l bg-accent white pa3 pa4-l">
     <h2 class="f1 f-subheadline-l worksans mb1 mt0">Our values</h2>
 
-    <h3 class="measure-wide mb0 white normal f3 f2-l lh-solid">Curiosity · Intersectionality · Honesty · <br> Self-Agency · Solidarity
+    <h3 class="measure-wide mb0 white normal f3 f2-l lh-solid">Curiosity</h3>
+    <h3 class="measure-wide mb0 white normal f3 f2-l lh-solid">Intersectionality</h3>
+    <h3 class="measure-wide mb0 white normal f3 f2-l lh-solid">Honesty</h3>
+    <h3 class="measure-wide mb0 white normal f3 f2-l lh-solid">Self-Agency</h3>
+    <h3 class="measure-wide mb0 white normal f3 f2-l lh-solid">Solidarity</h3>
 </h3>
 
-    <p class="measure-wide f4 f3-l lh-copy white">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
+    <!-- <p class="measure-wide f4 f3-l lh-copy white">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p> -->
   </div>
 
   <div class="w-50-l pa3 pa4-l">
