--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -9,27 +9,12 @@
         <p class="lh-solid f3 f2-l">Our expertise spans ideation to infrastructure.</p>
     </div>
 
-    <div class="flex-l bt bw2 mt4 bg-accent">
-      <div class="w-third-l ph3 pr4-l">
-        <h3 class="f3 mb1">Decentralized web protocols</h3>
-        <ul class="lh-copy pl3">
-          <li>Peer-to-peer technologies</li>
-              <li>Distributed ledger and blockchain-based technologies</li>
-        </ul>
-      </div>
-
-      <div class="w-third-l ph3 pr4-l">
-        <h3 class="f3 mb1">Technical capacity development for <br> co-operatives and collectives</h3>
-       
-      </div>
-
-     <div class="w-third-l ph3 pr4-l">
-        <h3 class="f3 mb1">Governance of co-ops and decentralized digital communities</h3>
-        <ul class="lh-copy pl3">
-              <li>Community ownership strategy</li>
-        </ul>
-    
-        </ul>
+    <div class="flex-l bt w-100 bw2 mt4 bg-accent">
+      <div class="flex flex-wrap ph3 pr4-l">
+        <h3 class="f3 ma2">Decentralized web protocols</h3>
+        <h3 class="f3 ma2">Peer-to-peer protocols</h3>
+        <h3 class="f3 ma2">Technical capacity development for <br> co-operatives and collectives</h3>
+        <h3 class="f3 ma2">Governance of co-ops and decentralized digital communities</h3>
       </div>
     </div>
   </div>
