--- a/_includes/sections/team-bios.html
+++ b/_includes/sections/team-bios.html
@@ -36,12 +36,73 @@
   </article>
   <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
     <div class="tc">
-      <img src="https://boredhumans.b-cdn.net/faces2/115.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/135.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
       <h1 class="f4">Cole Anthony Capilongo</h1>
       <h2 class="f5 fw4 gray mt0">(he/him)</h2>
       <hr class="mw3 bb bw1 b--black-10">
     </div>
     <p class="lh-copy measure center f6 black-70">Cole Anthony Capilongo is a software developer interested in decentralization, networking, and protocols. As a contractor for Hypha, he works with Starling Lab to improve digital authenticity, and on the Cosmos project to develop infrastructure tooling. In the past he has authored various open source projects, and worked on building a mesh network in Toronto. 
         </p>
+  </article>
+  <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
+    <div class="tc">
+      <img src="https://boredhumans.b-cdn.net/faces2/119.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <h1 class="f4">Dante Armando Sanchez</h1>
+      <h2 class="f5 fw4 gray mt0">(he/him)</h2>
+      <hr class="mw3 bb bw1 b--black-10">
+    </div>
+    <p class="lh-copy measure center f6 black-70">Dante is an engineer and probationary member of Hypha Worker Co-operative, where he is dedicated to planning and building tooling for peer-to-peer networks.
+
+</p><p class="lh-copy measure center f6 black-70">
+      Dante has a background in mechanical engineering and has worked in the development of geophysics, ultrasound, and mass spectrometry instruments. He is interested in building community-owned infrastructure and spreading technical literacy.
+      </p>
+  </article>
+  <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
+    <div class="tc">
+      <img src="https://boredhumans.b-cdn.net/faces2/143.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <h1 class="f4">Mauve</h1>
+      <h2 class="f5 fw4 gray mt0">(they/them)</h2>
+      <hr class="mw3 bb bw1 b--black-10">
+    </div>
+    <p class="lh-copy measure center f6 black-70">Mauve is a decentralized software consultant who has been working on everything from setting up local mesh networks, local-first file transfer apps, a decentralized web browser, and to a peer to peer virtual reality.
+
+</p><p class="lh-copy measure center f6 black-70">
+      Their focus at Hypha is on integrating peer to peer protocols and in particular making Distributed Press more reliable and feature complete.
+      
+</p><p class="lh-copy measure center f6 black-70">
+      Mauve is a local-first maximalist and values software working offline, on local networks, and without control and pressure from cloud-based corporations.
+      </p>
+  </article>
+  <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
+    <div class="tc">
+      <img src="https://boredhumans.b-cdn.net/faces2/155.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <h1 class="f4">Andi Argast</h1>
+      <h2 class="f5 fw4 gray mt0">(she/her)</h2>
+      <hr class="mw3 bb bw1 b--black-10">
+    </div>
+    <p class="lh-copy measure center f6 black-70">Andi is a strategist, researcher, and facilitator. She is currently a prospective member of Hypha Worker Co-op.
+
+</p><p class="lh-copy measure center f6 black-70">
+      Andi has consistently worked at the intersection of digital technologies and the social good sector, with design, strategy, and insight experience at Girl Guides of Canada, the Framework Foundation, and a variety of arts organizations. Andi believes that digital and data literacy are key  to an engaged and functioning society, and was a core member of the Toronto Node of the Open Data Institute. A certified practitioner of human-centered design, Andi also holds a Master of Information from the University of Toronto, and a Bachelor of Journalism from Carleton University. 
+      </p>
+  </article>
+  <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
+    <div class="tc">
+      <img src="https://boredhumans.b-cdn.net/faces2/157.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <h1 class="f4">Yurko</h1>
+      <h2 class="f5 fw4 gray mt0">(he/him)</h2>
+      <hr class="mw3 bb bw1 b--black-10">
+    </div>
+    <p class="lh-copy measure center f6 black-70">Yurko is an engineer of software and networks with an interest in their decentralization. He is a Co-founding Member of Hypha Worker Co-operative and head of engineering at Starling Lab for Data Integrity.
+      </p>
+  </article>
+  <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
+    <div class="tc">
+      <img src="https://boredhumans.b-cdn.net/faces2/144.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <h1 class="f4">Mai</h1>
+      <h2 class="f5 fw4 gray mt0">(they/them)</h2>
+      <hr class="mw3 bb bw1 b--black-10">
+    </div>
+    <p class="lh-copy measure center f6 black-70">Mai is a contributor to Hypha. They are an organizer and writer focused on the digital commons and other intersections between network technologies and the solidarity economy. They are the host of What's At Stake, a show about decentralized governance and the Cosmos Hub. They are a co-founder and editor of COMPOST, an online magazine about and for the digital commons. They are also the Director of Fellowships of DWeb Camp, and a Digital Commons Fellow with Commons Network.</p>
   </article>
 </div>
