--- a/_includes/sections/team-bios.html
+++ b/_includes/sections/team-bios.html
@@ -99,10 +99,19 @@
   <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
     <div class="tc">
       <img src="https://boredhumans.b-cdn.net/faces2/144.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
-      <h1 class="f4">Mai</h1>
+      <h1 class="f4">Mai Ishikawa Sutton</h1>
       <h2 class="f5 fw4 gray mt0">(they/them)</h2>
       <hr class="mw3 bb bw1 b--black-10">
     </div>
     <p class="lh-copy measure center f6 black-70">Mai is a contributor to Hypha. They are an organizer and writer focused on the digital commons and other intersections between network technologies and the solidarity economy. They are the host of What's At Stake, a show about decentralized governance and the Cosmos Hub. They are a co-founder and editor of COMPOST, an online magazine about and for the digital commons. They are also the Director of Fellowships of DWeb Camp, and a Digital Commons Fellow with Commons Network.</p>
+  </article>
+  <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
+    <div class="tc">
+      <img src="https://boredhumans.b-cdn.net/faces2/144.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <h1 class="f4">Elon </h1>
+      <h2 class="f5 fw4 gray mt0">(he/him)</h2>
+      <hr class="mw3 bb bw1 b--black-10">
+    </div>
+    <p class="lh-copy measure center f6 black-70">Elon is a network and systems administrator. He manages production servers and design and manages custom network architectures. He is a Co-founding Member of Hypha.</p>
   </article>
 </div>
