--- a/_includes/sections/team-bios.html
+++ b/_includes/sections/team-bios.html
@@ -1,4 +1,6 @@
-<div class="flex flex-wrap mb4">
+    <h3 class="measure-wide f2 f1-m f-subheadline-l measure-narrow lh-solid accent normal worksans">As a non-profit worker co-operative, Hypha strives to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together. </h3>
+    
+<div class="flex flex-wrap mb4 contain scaling-3">
 <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
     <div class="tc">
       <img src="https://boredhumans.b-cdn.net/faces2/105.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
@@ -107,11 +109,51 @@
   </article>
   <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
     <div class="tc">
-      <img src="https://boredhumans.b-cdn.net/faces2/144.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/171.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
       <h1 class="f4">Elon </h1>
       <h2 class="f5 fw4 gray mt0">(he/him)</h2>
       <hr class="mw3 bb bw1 b--black-10">
     </div>
     <p class="lh-copy measure center f6 black-70">Elon is a network and systems administrator. He manages production servers and design and manages custom network architectures. He is a Co-founding Member of Hypha.</p>
   </article>
+  <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
+    <div class="tc">
+      <img src="https://boredhumans.b-cdn.net/faces2/134.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <h1 class="f4">Cameron Fyfe</h1>
+      <h2 class="f5 fw4 gray mt0">(lorem)</h2>
+      <hr class="mw3 bb bw1 b--black-10">
+    </div>
+    <p class="lh-copy measure center f6 black-70">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </article>
+  <article class="mw6 center bg-white br0 pa3 pa4-ns mv3 ba b--black-10">
+    <div class="tc">
+      <img src="https://boredhumans.b-cdn.net/faces2/199.jpg" class="br-100 h5 w5 dib" title="Photo of a kitty staring at you">
+      <h1 class="f4">Sacha</h1>
+      <h2 class="f5 fw4 gray mt0">(lorem)</h2>
+      <hr class="mw3 bb bw1 b--black-10">
+    </div>
+    <p class="lh-copy measure center f6 black-70">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </article>
 </div>
+<div class="flex-l mb4">
+      <div class="w-50-l bg-accent white pa3 pa4-l">
+
+      </div>
+    
+      <div class="w-50-l pa3 pa4-l">
+        <div class="measure-wide">
+          <h5 class="f4 mb0 mt2">Build change that lasts</h5>
+          <p class="lh-copy">Disruptive growth has its costs. We seek change that strengthens our communities and nurtures our planet. We work thoughtfully and with care toward the futures we imagine..</p>
+        </div>
+    
+        <div class="measure-wide">
+          <h5 class="f4 mb0">Embody co-operative values</h5>
+          <p class="lh-copy">We serve our clients, members, neighbours, and the co-operative movement the world over. Hypha embodies the co-operative values of <strong>self-help, self-responsibility, democracy, equality, equity,</strong> and <strong>solidarity.</strong></p>
+        </div>
+    
+        <div class="measure-wide">
+          <h5 class="f4 mb0">Provide safe harbour</h5>
+          <p class="lh-copy mb0">We acknowledge the sacred land we work on is the territory of many nations and was the subject of the Dish with One Spoon Wampum Belt Covenant, an agreement to peaceably share and care for the resources around the Great Lakes. Today it is still home to many First Nations, Inuit, and Métis peoples from across Turtle Island. We also recognize the ongoing history of oppression and marginalization in our society and workplaces. Hypha strives to be a safe harbour to all, regardless of race, class, gender identity and expression, sexual orientation, disability, physical appearance, body size, religion, or technical skill.</p>
+        </div>
+      </div>
+    </div>
