--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -4,7 +4,7 @@
     <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
     
     <h3 class="mb0 accent normal f3 f2-l lh-solid  measure-wide bg-white ">
-     A team of technologists, designers, and community organizers who value working with mission-oriented partners. Together, we have years of experience building open source technologies and sustainable communities.
+     A team of technologists, designers, and community organizers who value working with mission-oriented partners. .
 
     </h3>
 
@@ -17,11 +17,10 @@
       <img src="https://boredhumans.b-cdn.net/faces2/109.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
       <img src="https://boredhumans.b-cdn.net/faces2/145.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
       <img src="https://boredhumans.b-cdn.net/faces2/109.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
-      <img src="https://boredhumans.b-cdn.net/faces2/103.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
-      <img src="https://boredhumans.b-cdn.net/faces2/105.jpg" class="br-100 h3 w3 pa3 dib" title="Photo of a kitty staring at you">
+      <img src="https://boredhumans.b-cdn.net/faces2/103.jpg" class="br-100 h3 w3 pb2 pa3 dib" title="Photo of a kitty staring at you">
 </div>
      <p class="measure-wide f4 f3-l lh-copy dark-gray bg-white">
-      As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.
+      Together, we have years of experience building open source technologies and sustainable communities.
     </p> </div>
   <div class="w-50-l">
     <figure class="relative mt0 ma4 ">
