--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -1,5 +1,11 @@
 <div class="flex-l items-baseline">
   <div class="w-100 w-50-l">
+    <ul class="list pl0 flex flex-wrap f5 f4-l">
+      <li class="pr3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank" rel="noopener">GitHub</a></li>
+      <li class="pr3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>LinkedIn</a></li>
+      <li class="pr3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">Twitter</a></li>
+      <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank" rel="noopener">Handbook</a></li>
+    </ul>
     <p class="f3 f4-l lh-copy">{{ site.footer }}</p>
     <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a href="https://handbook.hypha.coop/data.html" target="_blank" class="accent link underline-hover" rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/working-open.html" target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a>.</p>
     <p class="f6 f5-l lh-copy">
@@ -11,11 +17,8 @@
     <p class="f6 f5-l lh-copy">This website content is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" class="accent link underline-hover" rel="noopener">Creative Commons Attribution-ShareAlike 4.0 International</a> license.</p>
   </div>
   <div class="w-100 w-50-l">
-    <ul class="list pl0 flex flex-wrap f5 f4-l">
-      <li class="pr3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank" rel="noopener">GitHub</a></li>
-      <li class="pr3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>LinkedIn</a></li>
-      <li class="pr3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">Twitter</a></li>
-      <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank" rel="noopener">Handbook</a></li>
-    </ul>
+  <p class="f4">
+    We acknowledge the sacred land we work on is the territory of many nations and was the subject of the Dish with One Spoon Wampum Belt Covenant, an agreement to peaceably share and care for the resources around the Great Lakes. Today it is still home to many First Nations, Inuit, and Métis peoples from across Turtle Island. We also recognize the ongoing history of oppression and marginalization in our society and workplaces. Hypha strives to be a safe harbour to all, regardless of race, class, gender identity and expression, sexual orientation, disability, physical appearance, body size, religion, or technical skill.
+    </p>
   </div>
 </div>
