reformat what we do

--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,5 +1,5 @@
-<div class="bg-accent white pa4-l pa3 contain bg-right aliased scaling-2">
-  <div class="w-75-l w-100-m">
+<div class="bg-accent white pa4-l pa3 contain bg-right aliased scaling-2 flex">
+  <div class="w-50-l w-100-m">
 
     <h2 class="f1 f-subheadline-l worksans ma0">What we do</h2>
 
@@ -9,13 +9,14 @@
         <p class="lh-solid f3 f2-l">Our expertise spans ideation to infrastructure.</p>
     </div>
 
-    <div class="flex-l bt w-100 bw2 mt4 bg-accent">
-      <div class="flex flex-wrap ph3 pr4-l">
-        <h3 class="f3 ma2">Decentralized web protocols</h3>
-        <h3 class="f3 ma2">Peer-to-peer protocols</h3>
-        <h3 class="f3 ma2">Technical capacity development for <br> co-operatives and collectives</h3>
-        <h3 class="f3 ma2">Governance of co-ops and decentralized digital communities</h3>
+    </div>
+    <div class="w-50-l w-100">
+
+      <div class="flex flex-wrap ph3 pr4-l bg-accent">
+        <h3 class="f2 ma2">Decentralized web protocols</h3>
+        <h3 class="f2 ma2">Peer-to-peer protocols</h3>
+        <h3 class="f2 ma2">Technical capacity development for <br> co-operatives and collectives</h3>
+        <h3 class="f2 ma2">Governance of co-ops and decentralized digital communities</h3>
       </div>
     </div>
-  </div>
 </div> 
