--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,4 +1,4 @@
-<div class=" scaling-3 contain flex-l mb4 bg-accent">
+<div class="  contain flex-l mb4 bg-accent">
   <div class="w-50-l bg-accent white pa3 pa4-l">
     <h2 class="f1 f-subheadline-l worksans mb1 mt0">Our values</h2>
 
