--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,4 +1,4 @@
-<div class="bg-accent white pa4-l pa3 contain bg-right aliased scaling-2 flex">
+<div class="bg-accent white pa4-l pa3 contain bg-right aliased  flex">
   <div class="w-50-l w-100-m">
 
     <h2 class="f1 f-subheadline-l worksans ma0">What we do</h2>
