continue simplifying font choices

--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,4 +1,4 @@
-<div class="flex-l items-start contain bg-left aliased bw2 pv4-m pv4-l bt b--accent ">
+<div class="flex-l items-start contain bg-left aliased pv4-m pv4-l ">
   <div class="w-50-l pr5 pl3">
     
     <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
