wireframe front page

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -3,10 +3,10 @@
     <h2 class="f1 f-subheadline-l worksans mb1 mt0">Our values</h2>
 
 
-    <p class="measure-wide f2 f2-l lh-copy white">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
+    <p class="measure-wide f3 lh-copy white">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
   </div>
 
-  <div class="w-50-l bl b--white ma5 pl4 bw2 ">
+  <div class="w-50-l bl b--white ma5 pl4 bw0 ">
     <div class="measure-wide">
     <h3 class="measure-wide mb0 white b normal f3 f1-l lh-solid">Curiosity</h3>
     <h3 class="measure-wide mb0 white b normal f3 f1-l lh-solid">Intersectionality</h3>
