--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,22 +1,25 @@
-<div class="bg-accent white pa4-l pa3 contain bg-right aliased  flex">
+<div class="bg-accent white pa4-l pa3 contain bg-right aliased  flex flex-column">
+    <h2 class="f1 f-subheadline-l worksans ma0 mb4">What we do</h2>
+    <div class="flex">
   <div class="w-50-l w-100-m">
 
-    <h2 class="f1 f-subheadline-l worksans ma0">What we do</h2>
 
     <div class="measure-wide bg-accent">
-      <p class="lh-solid f3 f2-l">We propagate community-led stewardship, grow technical capacity, and deliver concepts and products. </p>
+      <p class="lh-copy f3  mt0">We propagate community-led stewardship, grow technical capacity, and deliver concepts and products. </p>
 
-        <p class="lh-solid f3 f2-l">Our expertise spans ideation to infrastructure.</p>
+        <p class="lh-copy f3 ">Our expertise spans ideation to infrastructure.</p>
     </div>
 
     </div>
     <div class="w-50-l w-100">
 
       <div class="flex flex-wrap ph3 pr4-l bg-accent">
-        <h3 class="f2 ma2">Decentralized web protocols</h3>
-        <h3 class="f2 ma2">Peer-to-peer protocols</h3>
-        <h3 class="f2 ma2">Technical capacity development for <br> co-operatives and collectives</h3>
-        <h3 class="f2 ma2">Governance of co-ops and decentralized digital communities</h3>
+        <h3 class="f3 ma2 lh-copy">Decentralized web protocols 
+          <p>Peer-to-peer protocols</p>
+         <p>Technical capacity development for co-operatives and collectives</p> 
+         <p>Governance of co-ops and decentralized digital communities</p>
+        </h3>
       </div>
+    </div>
     </div>
 </div> 
