--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,28 +1,30 @@
+    <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
 <div class="flex-l items-start contain bg-left aliased pv4-m pv4-l ">
   <div class="w-50-l pr5 pl3">
     
-    <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
     
-    <h3 class="mb0 accent normal f3 f2-l lh-solid  measure-wide bg-white ">
+    <div class="mb0 accent normal f3  lh-copy  measure-wide bg-white ">
+      <p class="mv0">
      We are a team of technologists, designers, and community organizers who value working with mission-oriented partners.
-    </h3>
-    <h3 class="mb0 accent normal f3 f2-l lh-solid  measure-wide bg-white ">
+    </p>
+    <p>
       Together, we have years of experience building open source technologies and sustainable communities.
-    </h3>
+    </p>
+    </div>
 
 
-<div class="flex flex-wrap mb4">
+<!-- <div class="flex flex-wrap mb4">
     
   {% for person in site.people %}
       <img src="{{person.avatar }}" class="br-100 h3 w3 pa3 pl0 dib" title="Photo of a kitty staring at you">
   {% endfor %}
-</div>
+</div> -->
      <p class="measure-wide f4 f3-l lh-copy dark-gray bg-white">
     </p> </div>
-  <div class="w-50-l">
-    <figure class="ma0 relative">
-      <img class="db" src="/assets/images/scaling-1.png" alt="Photo by Caleb George on Unsplash">
-      <figcaption class="absolute bottom-2-l bottom-1 left-1 left-2-l f6-l f7 white">Photo by Caleb George on Unsplash</figcaption>
-    </figure>
+  <div class="w-50-l h5 bg-accent">
+    <!-- <figure class="ma0 relative"> -->
+      <!-- <img class="db" src="/assets/images/scaling-1.png" alt="Photo by Caleb George on Unsplash"> -->
+      <!-- <figcaption class="absolute bottom-2-l bottom-1 left-1 left-2-l f6-l f7 white">Photo by Caleb George on Unsplash</figcaption> -->
+    <!-- </figure> -->
   </div>
 </div>
