--- a/_includes/sections/work-preview.html
+++ b/_includes/sections/work-preview.html
@@ -1,10 +1,11 @@
-<div class="flex flex-wrap justify-center mb4 pv4">
+<h2 class="f-subheadline ma0 pt4 accent worksans">Work</h2>
+<div class="flex flex-wrap justify-left mb4 pv4">
     {% assign works = site.work | sort: 'order' %}
     {% for work in works %}
-        <div class="measure-narrow flex-column justify-center items-center mr4 mb4 tc pa3 bg-black-30">
-            <div class="pb3 white bg-accent">Logo</div>
-            <h2 class="f2 worksans">{{ work.title }}</h2>
-            <div class="pb3">{{ work.excerpt | markdownify }}</div>
+        <div class="measure-narrow flex-column justify-left items-left mr4 mb4 tl pa3 pl0">
+            <div class="w-100 h4 pv3 tl pl3 white bg-accent">Logo</div>
+            <h2 class="f2 worksans accent">{{ work.title }}</h2>
+            <div class="pb3 f4 accent lh-copy">{{ work.excerpt | markdownify }}</div>
         </div>
     {% endfor %}
 </div>
