--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,4 +1,4 @@
-<div class="bg-accent white pa4-l pa3 contain bg-right aliased  flex flex-column">
+<div class="bg-accent white pa4-l pa3 contain bg-right aliased  flex flex-column mb5">
     <h2 class="f1 f-subheadline-l worksans ma0 mb4">What we do</h2>
     <div class="flex">
   <div class="w-50-l w-100-m">
@@ -14,7 +14,7 @@
     <div class="w-50-l w-100">
 
       <div class="flex flex-wrap ph3 pr4-l bg-accent">
-        <h3 class="f3 ma2 lh-copy">Decentralized web protocols 
+        <h3 class="f3 ma2 lh-copy">Decentralized web and blockchain-based technologies 
           <p>Peer-to-peer protocols</p>
          <p>Technical capacity development for co-operatives and collectives</p> 
          <p>Governance of co-ops and decentralized digital communities</p>
