--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -1,4 +1,4 @@
-<div class="flex-l items-center mv2">
+<div class="flex-l items-center mv2 pa4">
   <div class="w-75-l">
     <h2 class="f1 f-subheadline-l worksans accent mb1">Work with us</h2>
 
