add join the team fix list sizes

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -8,10 +8,10 @@
 
   <div class="w-50-l bl b--white ma5 pl4 bw0 ">
     <div class="measure-wide">
-    <h3 class="measure-wide mb0 white b normal f3 f1-l lh-solid">Curiosity</h3>
-    <h3 class="measure-wide mb0 white b normal f3 f1-l lh-solid">Intersectionality</h3>
-    <h3 class="measure-wide mb0 white b normal f3 f1-l lh-solid">Honesty</h3>
-    <h3 class="measure-wide mb0 white b normal f3 f1-l lh-solid">Self-Agency</h3>
-    <h3 class="measure-wide mb0 white b normal f3 f1-l lh-solid">Solidarity</h3>
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Curiosity</h3>
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Intersectionality</h3>
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Honesty</h3>
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Self-Agency</h3>
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Solidarity</h3>
   </div>
 </div>
