add tweaks before sharing wireframe v2

--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -8,7 +8,7 @@
       <dd class="ml0"><a class="accent f3 link underline-hover" href="tel:{{ site.phone | | remove: ' ' | remove: '-' }}">LinkedIn</a></dd>
     </dl>
     <dl class="dib mr5">
-      <dt class="mb3 mt0 f3"><strong>Membership policies</strong></dt>
+      <dt class="mb3 mt0 f3"><strong>Our membership policies</strong></dt>
       <dd class="ml0"><a class="accent f3 link underline-hover" href="mailto:{{ site.email-hidden }}">Handbook</a></dd>
     </dl>
 
